minikube/test-cpu/test-cpu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-cpu-service
spec:
  selector:
    app: test-cpu
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
