minikube/test-cpu/test-cpu-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-cpu-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-cpu.local
    http:
      paths:
      - path: /api-docs
        pathType: Prefix
        backend:
          service:
            name: test-cpu-service
            port:
              number: 5000
  ingressClassName: nginx
